--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>EAT, SLEEP, BITE, REPEAT</title></head><body><h1>Welcome to the App</h1></body></html>
+<!DOCTYPE html><html><head><title>EAT, SLEEP, BITE, REPEAT</title></head><body><h1>Welcome to EAT, SLEEP, <span style='color:red'>BITE</span>, REPEAT</h1></body></html>
