--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>EAT, SLEEP, BITE, REPEAT</title></head><body><h1>Welcome to EAT, SLEEP, <span style='color:red'>BITE</span>, REPEAT</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EAT, SLEEP, BITE, REPEAT</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="app">
+        <h1><span class="white">EAT, SLEEP, </span><span class="red">BITE</span><span class="white">, REPEAT</span></h1>
+        <p>Vítej v aplikaci Cesta ke Svazovému figurantovi!</p>
+        <button onclick="showMessage()">Začít trénink</button>
+        <p id="message"></p>
+    </div>
+    <script src="main.js"></script>
+</body>
+</html>
